--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
    <title>Сайт на Bootstrap 4 + BEM</title>
 </head>
 <body>
-   
+   <header class="menu-bar">
+      <div class="container">
+         <div class="row">
+            <div class="col-xl-2">
+               <img src="img/logo.png" alt="My Landing" class="logo">
+            </div>
+            <div class="col-xl-8 ml-auto align-self-center">
+               <nav>
+                  <ul class="menu d-flex justify-content-end">
+                     <li class="menu__item"><a href="#">Home</a></li>
+                     <li class="menu__item"><a href="#">About</a></li>
+                     <li class="menu__item"><a href="#">Servicing</a></li>
+                     <li class="menu__item"><a href="#">Portfolio</a></li>
+                     <li class="menu__item"><a href="#">Blog</a></li>
+                     <li class="menu__item"><a href="#">Contact us</a></li>
+                     <li class="menu__item"><i class="fas fa-search"></i></li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
+      </div>
+   </header>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
