header and about us

--- a/index.html
+++ b/index.html
@@ -32,6 +32,45 @@
          </div>
       </div>
    </header>
+   <header class="header">
+      <div class="container">
+         <div class="row">
+            <div class="col-xl-12">
+               <h1 class="header__title">Web development project</h1>
+               <p class="header__text">Very suitable to support all web development projects</p>
+               <button class="button button_empty">Our services</button>
+               <button class="button button_full">Hire is now</button>
+            </div>
+         </div>
+      </div>
+   </header>
+   <section class="about">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">About Us</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+         </div>
+         <div class="row justify-content-around">
+            <div class="col-xl-3">
+               <img src="img/internet.png" alt="">
+               <h3 class="about_h3">Awesome Icons</h3>
+               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero molestiae et, nisi error!</p>
+            </div>
+            <div class="col-xl-3">
+               <img src="img/transfer.png" alt="">
+               <h3 class="about_h3">One Page</h3>
+               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero molestiae et, nisi error!</p>
+            </div>
+            <div class="col-xl-3">
+               <img src="img/head.png" alt="">
+               <h3 class="about_h3">Fully Responsive</h3>
+               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero molestiae et, nisi error!</p>
+            </div>
+         </div>
+      </div>
+   </section>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
