--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous">
    <link rel="stylesheet" href="css/style.css">
    <title>Сайт на Bootstrap 4 + BEM</title>
 </head>
+
 <body>
    <header class="menu-bar">
       <div class="container">
@@ -49,30 +53,105 @@
          <div class="row justify-content-center">
             <div class="col-xl-8">
                <h2 class="about__title">About Us</h2>
-               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
          </div>
          <div class="row justify-content-around">
             <div class="col-xl-3">
                <img src="img/internet.png" alt="">
                <h3 class="about_h3">Awesome Icons</h3>
-               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero molestiae et, nisi error!</p>
+               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                  molestiae et, nisi error!</p>
             </div>
             <div class="col-xl-3">
                <img src="img/transfer.png" alt="">
                <h3 class="about_h3">One Page</h3>
-               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero molestiae et, nisi error!</p>
+               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                  molestiae et, nisi error!</p>
             </div>
             <div class="col-xl-3">
                <img src="img/head.png" alt="">
                <h3 class="about_h3">Fully Responsive</h3>
-               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero molestiae et, nisi error!</p>
+               <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                  molestiae et, nisi error!</p>
             </div>
          </div>
       </div>
    </section>
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+   <section class="services">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">Our Services</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+         </div>
+         <div class="row justify-content-center">
+            <div class="col-xl-4">
+               <div class="our_card">
+                  <i class="fas fa-search icon"></i>
+                  <h3 class="about_h3">Research</h3>
+                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                     molestiae et, nisi error!</p>
+                  <button class="button-services">Read more</button>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="our_card">
+                  <i class="fas fa-images icon"></i>
+                  <h3 class="about_h3">Portfolio</h3>
+                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                     molestiae et, nisi error!</p>
+                  <button class="button-services">Read more</button>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="our_card">
+                  <i class="fas fa-question icon"></i>
+                  <h3 class="about_h3">Support</h3>
+                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                     molestiae et, nisi error!</p>
+                  <button class="button-services">Read more</button>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="our_card">
+                  <i class="fas fa-book icon"></i>
+                  <h3 class="about_h3">Documentation</h3>
+                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                     molestiae et, nisi error!</p>
+                  <button class="button-services">Read more</button>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="our_card">
+                  <i class="fas fa-code icon"></i>
+                  <h3 class="about_h3">Development</h3>
+                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                     molestiae et, nisi error!</p>
+                  <button class="button-services">Read more</button>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="our_card">
+                  <i class="fas fa-pencil-alt icon"></i>
+                  <h3 class="about_h3">Design</h3>
+                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eligendi vero
+                     molestiae et, nisi error!</p>
+                  <button class="button-services">Read more</button>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
