--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="col-xl-12">
                <h1 class="header__title">Web development project</h1>
                <p class="header__text">Very suitable to support all web development projects</p>
-               <button class="button button_empty">Our services</button>
-               <button class="button button_full">Hire is now</button>
+               <button class="button">Our services</button>
+               <button class="button">Hire is now</button>
             </div>
          </div>
       </div>
@@ -146,12 +146,42 @@
          </div>
       </div>
    </section>
+   <section class="portfolio">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">Latest Works</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+               <button val="on" class="button" filter="all">All</button>
+               <button val="off" class="button" filter="wd">Web design</button>
+               <button val="off" class="button" filter="ud">Ui/Ux design</button>
+               <button val="off" class="button" filter="moc">Mockups</button>
+            </div>
+         </div>
+         <div class="row filter">
+            <div filter="wd" class="col-xl-4"><img src="img/item1.png" alt=""></div>
+            <div filter="moc" class="col-xl-4"><img src="img/item2.png" alt=""></div>
+            <div filter="wd" class="col-xl-4"><img src="img/item3.png" alt=""></div>
+            <div filter="moc" class="col-xl-4"><img src="img/item4.png" alt=""></div>
+            <div filter="ud" class="col-xl-4"><img src="img/item5.png" alt=""></div>
+            <div filter="ud" class="col-xl-4"><img src="img/item6.png" alt=""></div>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-xl-12">
+            <button class="button">View all</button>
+         </div>
+      </div>
+   </section>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
+   <script src="js/jquery-3.3.1.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
