просто добавил выравнивание для фото на случай если в фильтре остаётся две фотографии. До этого они прилипали к левому краю. А теперь стоят по центру - более симпатично. Но хозяин-барин. Можно и без этого.

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                <button val="off" class="button" filter="moc">Mockups</button>
             </div>
          </div>
-         <div class="row filter">
+         <div class="row filter aligh_img">
             <div filter="wd" class="col-xl-4"><img src="img/item1.png" alt=""></div>
             <div filter="moc" class="col-xl-4"><img src="img/item2.png" alt=""></div>
             <div filter="wd" class="col-xl-4"><img src="img/item3.png" alt=""></div>
