--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </div>
       <div class="row">
          <div class="col-xl-12">
-            <button class="button">View all</button>
+            <button class="button-view">View all</button>
          </div>
       </div>
    </section>
