--- a/index.html
+++ b/index.html
@@ -160,17 +160,53 @@
             </div>
          </div>
          <div class="row filter aligh_img">
-            <div filter="wd" class="col-xl-4"><img src="img/item1.png" alt=""></div>
-            <div filter="moc" class="col-xl-4"><img src="img/item2.png" alt=""></div>
-            <div filter="wd" class="col-xl-4"><img src="img/item3.png" alt=""></div>
-            <div filter="moc" class="col-xl-4"><img src="img/item4.png" alt=""></div>
-            <div filter="ud" class="col-xl-4"><img src="img/item5.png" alt=""></div>
-            <div filter="ud" class="col-xl-4"><img src="img/item6.png" alt=""></div>
+            <div filter="wd" class="col-xl-4">
+               <img src="img/item1.png" alt="">
+               <div class="text">
+                  <h5>Hand Watch</h5>
+                  <p>Web design</p>
+               </div>
+            </div>
+            <div filter="moc" class="col-xl-4">
+               <img src="img/item2.png" alt="">
+               <div class="text">
+                  <h5>One Day Pass</h5>
+                  <p>Mockups</p>
+               </div>
+            </div>
+            <div filter="wd" class="col-xl-4">
+               <img src="img/item3.png" alt="">
+               <div class="text">
+                  <h5>Modal T-shirt</h5>
+                  <p>Web design</p>
+               </div>
+            </div>
+            <div filter="moc" class="col-xl-4">
+               <img src="img/item4.png" alt="">
+               <div class="text">
+                  <h5>Flask</h5>
+                  <p>Mockups</p>
+               </div>
+            </div>
+            <div filter="ud" class="col-xl-4">
+               <img src="img/item5.png" alt="">
+               <div class="text">
+                  <h5>Eplemost</h5>
+                  <p>Ui/Ux Design</p>
+               </div>
+            </div>
+            <div filter="ud" class="col-xl-4">
+               <img src="img/item6.png" alt="">
+               <div class="text">
+                  <h5>The kitchens</h5>
+                  <p>Ui/Ux Design</p>
+               </div>
+            </div>
          </div>
       </div>
       <div class="row">
          <div class="col-xl-12">
-            <button class="button-view">View all</button>
+            <button val="on" class="button" filter="all">View all</button>
          </div>
       </div>
    </section>
