--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-      crossorigin="anonymous">
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <link rel="stylesheet" href="css/style.css">
    <title>Сайт на Bootstrap 4 + BEM</title>
 </head>
@@ -210,13 +210,86 @@
          </div>
       </div>
    </section>
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
+   <section class="pricing">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">Pricing Plan</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+         </div>
+         <div class="row justify-content-around">
+            <div class="col-xl-4">
+               <div class="price">
+                  <div class="price__head">
+                     <p>Free Trail</p>
+                     <sup>$</sup> 00 <sub>per month</sub>
+                  </div>
+                  <div class="price__body">
+                     <ul>
+                        <li>30 Free Trail</li>
+                        <li>5 Free Projects</li>
+                        <li>PHP 5 Enabled</li>
+                        <li>24/7 Suports</li>
+                     </ul>
+                  </div>
+                  <div class="price__footer">
+                     <button>Order Now</button>
+                  </div>
+               </div>
+            </div>
+            <div class="col-xl-4">
+                  <div class="price">
+                     <div class="price__head">
+                        <p>Basic</p>
+                        <sup>$</sup> 50 <sub>per month</sub>
+                     </div>
+                     <div class="price__body">
+                        <ul>
+                           <li>30 Free Trail</li>
+                           <li>5 Free Projects</li>
+                           <li>PHP 5 Enabled</li>
+                           <li>24/7 Suports</li>
+                        </ul>
+                     </div>
+                     <div class="price__footer">
+                        <button>Order Now</button>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-xl-4">
+                     <div class="price">
+                        <div class="price__head">
+                           <p>Ultimates</p>
+                           <sup>$</sup> 99 <sub>per month</sub>
+                        </div>
+                        <div class="price__body">
+                           <ul>
+                              <li>30 Free Trail</li>
+                              <li>5 Free Projects</li>
+                              <li>PHP 5 Enabled</li>
+                              <li>24/7 Suports</li>
+                           </ul>
+                        </div>
+                        <div class="price__footer">
+                           <button>Order Now</button>
+                        </div>
+                     </div>
+                  </div>
+         </div>
+      </div>
+   </section>
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+   </script>
    <script src="js/jquery-3.3.1.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"></script>
-   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+   </script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+   </script>
    <script src="js/main.js"></script>
 </body>
 
