--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
    <link rel="stylesheet" href="css/style.css">
    <title>Сайт на Bootstrap 4 + BEM</title>
 </head>
@@ -240,43 +241,211 @@
                </div>
             </div>
             <div class="col-xl-4">
-                  <div class="price">
-                     <div class="price__head">
-                        <p>Basic</p>
-                        <sup>$</sup> 50 <sub>per month</sub>
-                     </div>
-                     <div class="price__body">
-                        <ul>
-                           <li>30 Free Trail</li>
-                           <li>5 Free Projects</li>
-                           <li>PHP 5 Enabled</li>
-                           <li>24/7 Suports</li>
-                        </ul>
-                     </div>
-                     <div class="price__footer">
-                        <button>Order Now</button>
-                     </div>
+               <div class="price">
+                  <div class="price__head">
+                     <p>Basic</p>
+                     <sup>$</sup> 50 <sub>per month</sub>
+                  </div>
+                  <div class="price__body">
+                     <ul>
+                        <li>30 Free Trail</li>
+                        <li>5 Free Projects</li>
+                        <li>PHP 5 Enabled</li>
+                        <li>24/7 Suports</li>
+                     </ul>
+                  </div>
+                  <div class="price__footer">
+                     <button>Order Now</button>
                   </div>
                </div>
-               <div class="col-xl-4">
-                     <div class="price">
-                        <div class="price__head">
-                           <p>Ultimates</p>
-                           <sup>$</sup> 99 <sub>per month</sub>
-                        </div>
-                        <div class="price__body">
-                           <ul>
-                              <li>30 Free Trail</li>
-                              <li>5 Free Projects</li>
-                              <li>PHP 5 Enabled</li>
-                              <li>24/7 Suports</li>
-                           </ul>
-                        </div>
-                        <div class="price__footer">
-                           <button>Order Now</button>
-                        </div>
-                     </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="price">
+                  <div class="price__head">
+                     <p>Ultimates</p>
+                     <sup>$</sup> 99 <sub>per month</sub>
                   </div>
+                  <div class="price__body">
+                     <ul>
+                        <li>30 Free Trail</li>
+                        <li>5 Free Projects</li>
+                        <li>PHP 5 Enabled</li>
+                        <li>24/7 Suports</li>
+                     </ul>
+                  </div>
+                  <div class="price__footer">
+                     <button>Order Now</button>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <section class="team">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">Our Team Member</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+         </div>
+         <div class="row multiple-items justify-content-center">
+            <div class="col-xl-4">
+               <img src="img/team1.png" alt="">
+               <h4>John Doe</h4>
+               <p>General Manager</p>
+               <div class="icons">
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <img src="img/team2.png" alt="">
+               <h4>Alexa Biru</h4>
+               <p>Office Director</p>
+               <div class="icons">
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <img src="img/team3.png" alt="">
+               <h4>Ronobir sing</h4>
+               <p>Admin</p>
+               <div class="icons">
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <img src="img/team1.png" alt="">
+               <h4>John Doe</h4>
+               <p>General Manager</p>
+               <div class="icons">
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+               </div>
+            </div>
+            <div class="col-xl-4">
+               <img src="img/team1.png" alt="">
+               <h4>John Doe</h4>
+               <p>General Manager</p>
+               <div class="icons">
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-vk fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+                  <a href="">
+                     <span class="fa-stack fa-2x">
+                        <i class="fas fa-square fa-stack-2x"></i>
+                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                     </span>
+                  </a>
+               </div>
+            </div>
          </div>
       </div>
    </section>
@@ -290,6 +459,7 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
    </script>
+   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <script src="js/main.js"></script>
 </body>
 
