--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
    <link rel="stylesheet" href="css/style.css">
    <title>Сайт на Bootstrap 4 + BEM</title>
 </head>
@@ -449,16 +450,82 @@
          </div>
       </div>
    </section>
+   <section class="services">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">Blog</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+         </div>
+         <div class="row left">
+            <div class="col-xl-6">
+               <img src="img/blog1.png" alt="">
+            </div>
+            <div class="col-xl-6">
+               <div class="blog">
+                  <a href="">SEO Quis Vestibulum</a>
+                  <div>
+                     <span><i class="far fa-calendar-alt"></i> 14.07.2017</span>
+                     <span><i class="far fa-file"></i> Development</span>
+                  </div>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum placeat mollitia, exercitationem
+                     commodi perspiciatis asperiores modi consectetur quas sequi tenetur!</p>
+               </div>
+            </div>
+         </div>
+         <div class="row right">
+            <div class="col-xl-6">
+               <img src="img/blog2.png" alt="">
+            </div>
+            <div class="col-xl-6">
+               <div class="blog">
+                  <a href="">SEO Quis Vestibulum</a>
+                  <div>
+                     <span><i class="far fa-calendar-alt"></i> 14.07.2017</span>
+                     <span><i class="far fa-file"></i> Development</span>
+                  </div>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo minima illo architecto ea, debitis,
+                     accusantium et obcaecati corrupti neque magnam voluptas nulla quae reprehenderit. Quos porro
+                     explicabo illum libero autem!</p>
+               </div>
+            </div>
+         </div>
+         <div class="row left">
+            <div class="col-xl-6">
+               <img src="img/blog3.png" alt="">
+            </div>
+            <div class="col-xl-6">
+               <div class="blog">
+                  <a href="">SEO Quis Vestibulum</a>
+                  <div>
+                     <span><i class="far fa-calendar-alt"></i> 14.07.2017</span>
+                     <span><i class="far fa-file"></i> Development</span>
+                  </div>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo minima illo architecto ea, debitis,
+                     accusantium et obcaecati corrupti neque magnam voluptas nulla quae reprehenderit. Quos porro
+                     explicabo illum libero autem!</p>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-xl-12">
+               <button class="button_blog">More View</button>
+            </div>
+         </div>
+      </div>
+   </section>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-   </script>
+      </script>
    <script src="js/jquery-3.3.1.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-   </script>
+      </script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-   </script>
+      </script>
    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <script src="js/main.js"></script>
 </body>
