возможное решение проблемы с полосой нижней прокрутки

--- a/index.html
+++ b/index.html
@@ -459,11 +459,11 @@
                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
          </div>
-         <div class="row left">
-            <div class="col-xl-6">
+         <div class="row left justify-content-between">
+            <div class="blog-item ">
                <img src="img/blog1.png" alt="">
             </div>
-            <div class="col-xl-6">
+            <div class="blog-item ">
                <div class="blog">
                   <a href="">SEO Quis Vestibulum</a>
                   <div>
@@ -475,11 +475,11 @@
                </div>
             </div>
          </div>
-         <div class="row right">
-            <div class="col-xl-6">
+         <div class="row right justify-content-between">
+            <div class="blog-item">
                <img src="img/blog2.png" alt="">
             </div>
-            <div class="col-xl-6">
+            <div class="blog-item">
                <div class="blog">
                   <a href="">SEO Quis Vestibulum</a>
                   <div>
@@ -492,11 +492,11 @@
                </div>
             </div>
          </div>
-         <div class="row left">
-            <div class="col-xl-6">
+         <div class="row left justify-content-between">
+            <div class="blog-item">
                <img src="img/blog3.png" alt="">
             </div>
-            <div class="col-xl-6">
+            <div class="blog-item">
                <div class="blog">
                   <a href="">SEO Quis Vestibulum</a>
                   <div>
