--- a/index.html
+++ b/index.html
@@ -206,9 +206,11 @@
             </div>
          </div>
       </div>
-      <div class="row">
-         <div class="col-xl-12">
-            <button val="on" class="button" filter="all">View all</button>
+      <div class="container">
+         <div class="row">
+            <div class="col-xl-12">
+               <button val="on" class="button" filter="all">View all</button>
+            </div>
          </div>
       </div>
    </section>
@@ -287,7 +289,7 @@
          <div class="row justify-content-center">
             <div class="col-xl-8">
                <h2 class="about__title">Our Team Member</h2>
-               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
          </div>
