--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
          <div class="row justify-content-center">
             <div class="col-xl-8">
                <h2 class="about__title">Our Team Member</h2>
-                  <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
          </div>
@@ -518,6 +518,38 @@
          </div>
       </div>
    </section>
+   <footer class="footer">
+      <div class="container">
+         <div class="row justify-content-center">
+            <div class="col-xl-8">
+               <h2 class="about__title">Contact Us</h2>
+               <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+            </div>
+         </div>
+         <div class="row justify-content-around">
+            <div class="col-xl-3">
+               <div class="circle"><i class="fas fa-map-marker-alt"></i></div>
+               <p>Nobinagar savar,<br>Dhaka Bangladesh</p>
+            </div>
+            <div class="col-xl-3">
+               <div class="circle"><i class="fas fa-phone fa-rotate-90"></i></div>
+               <p>+8801743331996<br>+8801928737807</p>
+            </div>
+            <div class="col-xl-3">
+               <div class="circle"><i class="fas fa-envelope"></i></div>
+               <p>quickmasud@gmail.com<br>quickmasud@yahoo.com</p>
+            </div>
+         </div>  
+         <div class="row justify-content-center form">
+            <div class="col-xl-5"><input type="text" placeholder="Your Name"></div>
+            <div class="col-xl-5"><input type="email" placeholder="Your Email"></div>
+            <div class="col-xl-10"><textarea name="" id="" cols="30" rows="10" placeholder="Write Message"></textarea></div>
+            <div class="col-xl-2 offset-xl-7"><button>Send</button></div> 
+         </div>    
+      </div>
+   </footer>
+   <footer class="rules">All rights Reserved © 2017</footer>
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
       </script>
